[tool]
[tool.poetry]
name = "PyDV"
version = "3.3.0"
description = "PyDV: Python Data Visualizer"
license = "BSD"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research', 
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
homepage = "https://github.com/LLNL/PyDV"
documentation = "https://pydv.readthedocs.io/en/latest/"
authors = [
    "Sarah El-Jurf <eljurf1@llnl.gov>", "Sarah El-Jurf",
    "Jorge Moreno <moreno45@llnl.gov", "Jorge Moreno",
    "Edward Rusu <rusu1@llnl.gov>", "Edward Rusu",
]
maintainers = [
    "Sarah El-Jurf <eljurf1@llnl.gov>", "Sarah El-Jurf",
    "Jorge Moreno <moreno45@llnl.gov", "Jorge Moreno",
]
readme = "README.md"
packages = [
    {include = 'pydv'},
]
include = ['img/*']

[tool.poetry.dependencies]
python = ">=3.6"
matplotlib = "*"
numpy = "*"
scikit-learn = "*"
scipy = "*"
PySide2 = "*"
PyQt5 = "*"

[tool.poetry.dev-dependencies]
sphinx_rtd_theme = "*"
sphinx = "*"
pytest = "*"
sphinx-autoapi = "*"
six = "*"
flake8 = "*"
scikit-image = "*"

[tool.poetry.plugins."console_scripts"]
'pdv' = 'pydv.pdv:main'

[build-system]
requires = ["poetry-core>=1.0.8", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LLNL/PyDV/issues"
"Discussions" = "https://github.com/LLNL/PyDV/discussions"

[tool.black]
line-length = 79

[tool.bumpver]
current_version = "3.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
